--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <header>
     <div class="cabecario">
-        <h1 class="titulo"> Soft Engine <img src="https://cdn.pixabay.com/photo/2016/11/08/00/30/gear-1807204_1280.png"
+        <h1 class="titulo"> Soft Engine <img src="img/Logo.png"
                 width="40px" height="40px"></h1>
         <ul class="botoesCabecario">
-            <a href="pagina1.html"><button class="botaoCabecario"> Sobre Nós</button></a>
-            <a href="pagina2.html"><button class="botaoCabecario"> botao 2 </button></a>
-            <a href="pagina3.html"><button class="botaoCabecario"> botao 3</button></a>
-            <a href="pagina4.html"><button class="botaoCabecario1"> Saiba Mais</button></a>
+            <!--<a href="Sobre.html"><button class="botaoCabecario"> Sobre Nós</button></a>-->
+            <a href="#solucoes"><button class="botaoCabecario">Soluções</button></a>
+            <a href="Registrar.html"><button class="botaoCabecario"> Registrar</button></a>
+            <a href="login.html"><button class="botaoCabecario1"> Login</button></a>
         </ul>
     </div>
 </header>
@@ -27,28 +27,32 @@
             <p class="paragrafo">
                 Sua empresa mais <span>ágil, eficiente e produtiva em todos os setores</span>
             </p>
-            <a href="paginaSaibamais"><button class="botaoSaibamais">Saiba mais</button></a>
-            <a href="paginaEntrar"><button class="botaoEntrar">Entrar</button></a>
+            <a href="Sobre.html"><button class="botaoSaibamais">Saiba mais</button></a>
+            <a href="login.html"><button class="botaoEntrar">Entrar</button></a>
 
         </div>
 
         <aside>
-            <img class="imagemPrincipal" src="/img/niggerman.webp" title="sigma">
+            <img class="imagemPrincipal" src="img/Foto1.webp" title="">
         </aside>
     </main>
-     <div class="texto2"> <p>Lorem ipnde reiciendis corrupti saepe voluptate autem alias dolore!</p> </div>
+    <section id="solucoes">
+    <div class="texto2"> <p>Ao adquirir nossos serviços, você terá benefícios como: </p> </div>
+        </section>
     <div class="main2">
+        
        <div class="cards">
-<div class="card1"><h1>titulo card</h1><img class="imagemcard" src="https://images.vexels.com/media/users/3/153827/isolated/preview/050d23fc87215157ef54f2d21e131fa2-icone-de-cadeado-colorido.png"><p class="textocard">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum perferendis ut accusamus praesen</p></div>
-<div class="card2"><h1>titulo card</h1><img class="imagemcard"src=""><p class="textocard">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum perferendis ut accusamus praesen</p></div>       
-<div class="card3"><h1>titulo card</h1><img class="imagemcard"src=""><p class="textocard">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum perferendis ut accusamus praesen</p></div>    
+<div class="card1"><h1>Segurança</h1><img class="imagemcard" src="img/Cadeado.png"><p class="textocard">Seu sistema estará seguro conosco, sem risco de perda ou roubo de dados</p></div>
+<div class="card2"><h1>Automação</h1><img class="imagemcard"src="img/Automação.png"><p class="textocard">Traga uma maior eficiencia para a sua empresa com um sistema automatizado e simples de usar</p></div>       
+<div class="card3"><h1>Suporte</h1><img class="imagemcard"src="img/Suporte tecnico.png"><p class="textocard">Se estiver tendo problemas com o nosso produto, entre em contato conosco, para obter suporte </p></div>    
 </div>
 
 </div>
 </body>
 
-<footer>
+<footer style="display: flex; justify-content: space-between; padding: 10px; background-color: navy; color: white;">
     <h6>Todos os direitos reservados a Soft Engine</h6>
+    <h6 class="telefone">Tel:(43)99876-5432</h6>
 </footer>
 
-</html>
+</html> 
